@@ -1,3 +1,7 @@
+Dommerplan 1.5.4 - Martin Juhl - mj@casalogic.dk
+
+  * Central styring af VIEWSTATE og EVENTVALIDATION fra resultater.basket.dk
+
 Dommerplan 1.5.3 - Martin Juhl - mj@casalogic.dk
 
   * Hover info på statistisk
